<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".reg_Activity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/ba">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/log"
        android:layout_marginBottom="80dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Reg"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="#fff"
        android:layout_marginTop="5dp"/>

    <EditText
        android:id="@+id/ph_num1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/baseline_phone_enabled_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/number"
        android:inputType="number"
        android:paddingLeft="15dp"
        android:paddingTop="2dp"
        android:paddingRight="10dp"
        android:paddingBottom="3dp"
        android:textColor="#fff"
        android:textColorHint="#fff"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/reg_name"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="10dp"
        android:hint="@string/username"
        android:paddingLeft="15dp"
        android:paddingTop="2dp"
        android:paddingRight="10dp"
        android:paddingBottom="3dp"
        android:textColor="#fff"
        android:textColorHint="#fff"
        android:textSize="25sp"
        android:ems="10"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/pass2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/input_bg"
        android:drawableLeft="@drawable/ic_baseline_security_24"
        android:drawablePadding="10dp"
        android:hint="@string/password"
        android:paddingLeft="15dp"
        android:paddingTop="2dp"
        android:paddingRight="10dp"
        android:paddingBottom="3dp"
        android:textColor="#fff"
        android:textColorHint="#fff"
        android:textSize="25sp"
        android:inputType="textPassword"
        android:ems="10"/>

    <EditText
        android:id="@+id/con_pass2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/input_bg"
        android:drawableLeft="@drawable/ic_baseline_security_24"
        android:drawablePadding="10dp"
        android:hint="@string/con_pass"
        android:paddingLeft="15dp"
        android:paddingTop="2dp"
        android:paddingRight="10dp"
        android:paddingBottom="3dp"
        android:textColor="#fff"
        android:textColorHint="#fff"
        android:textSize="25sp"
        android:inputType="textPassword"
        android:ems="10"/>

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/Reg"
        android:textColor="#fff"
        android:textStyle="bold"
        android:background="@drawable/serach"
        android:id="@+id/reg_btn"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/alr_reg"
        android:textColor="#fff"
        android:textStyle="bold"
        android:textSize="15sp"
        android:id="@+id/log_txt"/>


</LinearLayout>