<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".languageActivity"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/ba">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/language"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:textColor="#fff"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="25sp"
        android:text="@string/choose"
        android:layout_marginTop="50dp"
        android:textColor="#fff"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="25sp"
        android:text="@string/hin_lan"
        android:layout_marginTop="10dp"
        android:textColor="#fff"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/hindi"
            android:id="@+id/hindi1"/>

        <ImageView
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:background="@drawable/english"
            android:id="@+id/eng1"/>

    </LinearLayout>

</LinearLayout>